@@ -111,6 +111,23 @@ local function CreateClickableHeader(wMain, headerFrame, collapseKey)
 	end
 end
 
+---@param parent any
+---@param itemLink string|nil
+local function CreateClickableItemFunctionality(parent, itemLink)
+	if not parent or not itemLink or itemLink == "" then return end
+
+	parent:EnableMouse(true)
+	parent:SetScript("OnMouseUp", function(self, btn)
+		if itemLink then
+			if IsShiftKeyDown() then
+				HandleModifiedItemClick(itemLink)
+			elseif IsControlKeyDown() then
+				DressUpItemLink(itemLink)
+			end
+		end
+	end)
+end
+
 ---@param wMain Frame|nil
 ---@return  number, number, number, number, number
 local function LoadItemList(wMain)
@@ -275,6 +292,10 @@ local function LoadItemList(wMain)
 				local ttLines = CreateItemTooltip(wMain, icon, item, nil)
 				CreateItemTooltip(wMain, textItemName, item, ttLines)
 				CreateItemTooltip(wMain, textProgress, item, ttLines)
+
+				CreateClickableItemFunctionality(icon, item.link)
+				CreateClickableItemFunctionality(textItemName, item.link)
+				CreateClickableItemFunctionality(textProgress, item.link)
 			end
 		end
 	end
