@@ -3,6 +3,8 @@ Changelog:
 3.3
 - Removed Of Love and Family from Strat prep guide
 - Added missing target for Huum Wildmane and Layo
+- Added tooltips to the Items tab in the UI
+- Made it possible to shift-click items in the Items tab to link them, and right-click to open the dressing room
 
 3.2
 - Added Glyphed Oaken Branch and included prequests (Strat, Group)
